<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VR Video Player</string>
    <string name="input_url">输入视频链接</string>
    <string name="play">播放</string>
    <string name="vr_mode">VR模式</string>
    <string name="normal_mode">普通模式</string>
    <string name="play_speed">播放速度</string>
    <string name="forward">快进</string>
    <string name="backward">快退</string>
    <string name="pupil_distance">瞳距</string>
    <string name="screen_size">屏幕大小</string>
    <string name="pause">暂停</string>
    <string name="resume">继续</string>
    <string name="settings">设置</string>
    <string name="gyro_control">陀螺仪控制</string>
</resources>
