<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_large"
    android:gravity="center"
    android:background="@color/dark_gray">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin_large" />

    <EditText
        android:id="@+id/urlInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_url"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@android:drawable/edit_text"
        android:padding="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_large" />

    <Button
        android:id="@+id/playVRButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/vr_mode"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:backgroundTint="@color/purple_500" />

    <Button
        android:id="@+id/playNormalButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/normal_mode"
        android:textSize="@dimen/text_size_medium"
        android:backgroundTint="@color/teal_700" />

</LinearLayout>
