<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <!-- 播放器容器 -->
    <FrameLayout
        android:id="@+id/playerContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- 控制面板 -->
    <LinearLayout
        android:id="@+id/controlPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#80000000"
        android:padding="@dimen/margin_medium"
        android:layout_gravity="bottom">

        <!-- 播放进度条 -->
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium" />

        <!-- 时间显示 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_medium">

            <TextView
                android:id="@+id/currentTimeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="00:00:00"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/durationText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="00:00:00"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small"
                android:gravity="end" />
        </LinearLayout>

        <!-- 控制按钮 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:spacing="@dimen/margin_medium">

            <Button
                android:id="@+id/pauseResumeButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:text="@string/play"
                android:layout_margin="@dimen/margin_small" />

            <Button
                android:id="@+id/playSpeedButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:text="@string/play_speed"
                android:layout_margin="@dimen/margin_small" />

            <Button
                android:id="@+id/pupilDistanceButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:text="@string/pupil_distance"
                android:layout_margin="@dimen/margin_small" />

            <Button
                android:id="@+id/screenSizeButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:text="@string/screen_size"
                android:layout_margin="@dimen/margin_small" />

            <Button
                android:id="@+id/toggleModeButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:text="@string/normal_mode"
                android:layout_margin="@dimen/margin_small" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
